# databricks-exemplars

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md
.claude/skills/databricks-app-backend/: SKILL.md
.claude/skills/databricks-app-frontend/: SKILL.md
.claude/skills/databricks-data-scientist/: SKILL.md
.claude/skills/databricks-engineer/: SKILL.md
.claude/skills/unity-catalog-query/: SKILL.md
docs/: getting-started.md
exemplars/: README.md
exemplars/batch-etl-pipeline/: README.md  SETUP.md  databricks.yml  pyproject.toml
exemplars/batch-etl-pipeline/resources/: job.yml  pipeline.yml
exemplars/batch-etl-pipeline/src/: pipeline.py
exemplars/batch-etl-pipeline/tests/: test_transformations.py
exemplars/ml-end-to-end/: README.md
exemplars/ml-end-to-end/src/: batch_inference.py  features.py  train.py  validate.py
exemplars/ml-model-serving/: README.md  SETUP.md  databricks.yml  pyproject.toml
exemplars/ml-model-serving/resources/: batch_job.yml  monitoring_job.yml  serving.yml  training_job.yml
exemplars/ml-model-serving/src/: batch_inference.py  deploy.py  feature_engineering.py  monitoring.py  register_model.py  train.py
exemplars/ml-model-serving/tests/: test_features.py
exemplars/streaming-lakehouse/: README.md  SETUP.md  databricks.yml  pyproject.toml
exemplars/streaming-lakehouse/resources/: job.yml
exemplars/streaming-lakehouse/src/: stream_ingest.py
exemplars/streaming-lakehouse/tests/: test_stream_logic.py
shared/scripts/: init-from-exemplar.sh
