[project]
name = "batch-etl-pipeline"
version = "0.1.0"
description = "Batch ETL pipeline with medallion architecture"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pyspark>=3.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
